[package]
name = "dagger-bytes-emu-cdylib"
version = "0.0.0"
edition = "2021"

[dependencies]
# For release.
# "dagger-bytes-c-common" = { version = "0.0.0" }
# For local development.
"dagger-bytes-c-common" = { path = "../../c-common" }
# For release.
# "dagger-bytes-common" = { version = "0.0.0" }
# For local development.
"dagger-bytes-common" = { path = "../../common" }
# For release.
# "dagger-bytes-emu" = { version = "0.0.0" }
# For local development.
"dagger-bytes-emu" = { path = "../../emu" }

[lib]
name = "dagger_bytes_emu"
crate-type = ["cdylib"]
path = "../src/lib.rs"
